ajout de l'action du formulaire vers netlify

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="contact-form">
                     <h4>Contactez-nous</h4>
                     <h3>Intervention dans toute l'Ile-de-France 24h/24 7j/7</h3>
-                    <form id="contactForm" name="contact" method="POST" data-netlify="true">
+                    <form id="contactForm" name="contact" method="POST" data-netlify="true" action="https://spontaneous-syrniki-88a157.netlify.app">
                         <div class="name-fields">
                             <div class="form-group">
                                 <label for="lastname">Nom*</label>
