changement action pour formsubmit

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="contact-form">
                     <h4>Contactez-nous</h4>
                     <h3>Intervention dans toute l'Ile-de-France 24h/24 7j/7</h3>
-                    <form id="contactForm" name="contact" method="POST" data-netlify="true" action="https://spontaneous-syrniki-88a157.netlify.app">
+                    <form id="contactForm" name="contact" method="POST" action="https://formsubmit.co/dixneufcode@gmail.com">
                         <div class="name-fields">
                             <div class="form-group">
                                 <label for="lastname">Nom*</label>
@@ -212,8 +212,14 @@
                         <label for="message">Message*</label>
                         <textarea id="message" name="message" maxlength="250" required></textarea>
 
-                        <!-- Champ caché obligatoire pour Netlify -->
-                        <input type="hidden" name="form-name" value="contact">
+                        <!-- Champ anti-spam -->
+                        <input type="text" name="_honey" style="display:none">
+
+                        <!-- Désactiver captcha automatique de Formsubmit -->
+                        <input type="hidden" name="_captcha" value="false">
+
+                        <!-- Redirection après envoi -->
+                        <input type="hidden" name="_next" value="https://cmb3d.fr/merci.html">
 
                         <!-- Champ anti-spam "honeypot" -->
                         <div style="display:none;">
