replacement du button submit

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="contact-form">
                     <h4>Contactez-nous</h4>
                     <h3>Intervention dans toute l'Ile-de-France 24h/24 7j/7</h3>
-                    <form id="contactForm" name="contact" method="POST" action="https://formsubmit.co/dixneufcode@gmail.com">
+                    <form id="contactForm" name="contact" action="https://formsubmit.co/dixneufcode@gmail.com" method="POST">
                         <div class="name-fields">
                             <div class="form-group">
                                 <label for="lastname">Nom*</label>
@@ -220,11 +220,11 @@
 
                         <!-- Redirection après envoi -->
                         <input type="hidden" name="_next" value="https://cmb3d.fr/merci.html">
-
+                        
+                        <div class="btnForm">
+                            <button type="submit">Envoyer</button>
+                        </div>
                     </form>
-                    <div class="btnForm">
-                        <button type="submit">Envoyer</button>
-                    </div>
                 </div>
             </section>
         </main>
