essai sans honeypot

--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
                         <label for="message">Message*</label>
                         <textarea id="message" name="message" maxlength="250" required></textarea>
 
-                        <!-- Champ anti-spam -->
-                        <input type="text" name="_honey" style="display:none">
+                        <!-- Champ anti-spam 
+                        <input type="text" name="_honey" style="display:none">-->
 
-                        <!-- Désactiver captcha automatique de Formsubmit -->
-                        <input type="hidden" name="_captcha" value="false">
+                        <!-- Désactiver captcha automatique de Formsubmit 
+                        <input type="hidden" name="_captcha" value="false">-->
 
                         <!-- Redirection après envoi -->
                         <input type="hidden" name="_next" value="https://cmb3d.fr/merci.html">
