multiples ajustement responsive

--- a/index.html
+++ b/index.html
@@ -49,14 +49,13 @@
             </nav>
         </div>
         </header>
-
     
         <main>
             <!---------------------------------- ACCUEIL ---------------------------------->
             <section id="acc">
                 <div class="acc-container">
                     <div class="acc-content">
-                        <img class="logo_CMB3D" src="assets/img/Logo/logo_CMB3D_crop.jpg">
+                        <!-- <img class="logo_CMB3D" src="assets/img/Logo/logo_CMB3D_crop.jpg"> -->
                         <h1>Expert en Dératisation, Désinsectisation & Désinfection.</h1>
                     </div>
                     <img class="acc-img" src="assets/img/Photos/WhatsApp Image 2025-05-12 at 09.55.40.jpeg">
@@ -212,11 +211,11 @@
                         <label for="message">Message*</label>
                         <textarea id="message" name="message" maxlength="250" required></textarea>
 
-                        <!-- Champ anti-spam 
-                        <input type="text" name="_honey" style="display:none">-->
+                        <!-- Champ anti-spam -->
+                        <input type="text" name="_honey" style="display:none">
 
-                        <!-- Désactiver captcha automatique de Formsubmit 
-                        <input type="hidden" name="_captcha" value="false">-->
+                        <!-- Désactiver captcha automatique de Formsubmit -->
+                        <input type="hidden" name="_captcha" value="false">
 
                         <!-- Redirection après envoi -->
                         <input type="hidden" name="_next" value="https://cmb3d.fr/merci.html">
@@ -231,26 +230,23 @@
         <!---------------------------------- FOOTER ---------------------------------->
         <footer>
             <div class="footer-grid">
-                <div class="footer-logo">
-                    <img src="assets/img/Logo/logo_CMB3D_crop.jpg" class="logo-img">
-                </div>
                 <div>
                     <span>nos services</span>
                     <ul>
-                        <li><a href="#services">dératisation</a></li>
-                        <li><a href="#services">désinsectisation</a></li>
-                        <li><a href="#services">désinfection</a></li>
+                        <li><a href="#services">Dératisation</a></li>
+                        <li><a href="#services">Désinsectisation</a></li>
+                        <li><a href="#services">Désinfection</a></li>
                     </ul>
                 </div>
                 <div>
                     <span>notre processus</span>
                     <ul>
-                        <li><a href="#process">prise de contact</a></li>
-                        <li><a href="#process">inspection des lieux</a></li>
-                        <li><a href="#process">diagnostic et choix du traitement</a></li>
-                        <li><a href="#process">application du traitement</a></li>
-                        <li><a href="#process">suivi et prévention</a></li>
-                        <li><a href="#process">enquête de satisfaction</a></li>
+                        <li><a href="#process">Prise de contact</a></li>
+                        <li><a href="#process">Inspection des lieux</a></li>
+                        <li><a href="#process">Diagnostic et choix du traitement</a></li>
+                        <li><a href="#process">Application du traitement</a></li>
+                        <li><a href="#process">Suivi et prévention</a></li>
+                        <li><a href="#process">Enquête de satisfaction</a></li>
                     </ul>
                 </div>
                 <div>
