test pour le formsubmit

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <div class="contact-form">
                     <h4>Contactez-nous</h4>
                     <h3>Intervention dans toute l'Ile-de-France 24h/24 7j/7</h3>
-                    <form id="contactForm" name="contact" action="https://formsubmit.co/dixneufcode@gmail.com" method="POST">
+                    <form id="contactForm" name="contact" action="https://formsubmit.co/contact@cmb3d.fr" method="POST">
                         <div class="name-fields">
                             <div class="form-group">
                                 <label for="lastname">Nom*</label>
@@ -211,11 +211,11 @@
                         <label for="message">Message*</label>
                         <textarea id="message" name="message" maxlength="250" required></textarea>
 
-                        <!-- Champ anti-spam -->
-                        <input type="text" name="_honey" style="display:none">
+                        <!-- Champ anti-spam 
+                        <input type="text" name="_honey" style="display:none">-->
 
-                        <!-- Désactiver captcha automatique de Formsubmit -->
-                        <input type="hidden" name="_captcha" value="false">
+                        <!-- Désactiver captcha automatique de Formsubmit
+                        <input type="hidden" name="_captcha" value="false">-->
 
                         <!-- Redirection après envoi -->
                         <input type="hidden" name="_next" value="https://cmb3d.fr/merci.html">
