--- a/index.html
+++ b/index.html
@@ -211,14 +211,20 @@
                         <label for="message">Message*</label>
                         <textarea id="message" name="message" maxlength="250" required></textarea>
 
-                        <!-- Champ anti-spam 
-                        <input type="text" name="_honey" style="display:none">-->
+                        <!-- Champ anti-spam -->
+                        <input type="text" name="_honey" style="display:none">
 
-                        <!-- Désactiver captcha automatique de Formsubmit
-                        <input type="hidden" name="_captcha" value="false">-->
+                        <!-- Désactive le captcha automatique (ça évite la popup de vérif) -->
+                        <input type="hidden" name="_captcha" value="false">
 
-                        <!-- Redirection après envoi -->
+                        <!-- Définit un objet personnalisé -->
+                        <input type="hidden" name="_subject" value="Nouveau message depuis le site CMB3D">
+
+                        <!-- Rediriger l’utilisateur après envoi -->
                         <input type="hidden" name="_next" value="https://cmb3d.fr/merci.html">
+
+                        <!-- Utilise le modèle “tableau” pour que le mail reçu soit bien lisible -->
+                        <input type="hidden" name="_template" value="table">
                         
                         <div class="btnForm">
                             <button type="submit">Envoyer</button>
