--- a/index.html
+++ b/index.html
@@ -208,8 +208,11 @@
                         <label for="message">Message*</label>
                         <textarea id="message" name="message" maxlength="250" required></textarea>
 
+                        <!-- Anti Spam simple-->
+                        <input type="text" name="_honey" style="display:none">
+
                         <!-- Désactive le captcha automatique (ça évite la popup de vérif) -->
-                        <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_captcha" value="true">
 
                         <!-- Définit un objet personnalisé -->
                         <input type="hidden" name="_subject" value="Nouveau message depuis le site CMB3D">
