--- a/merci.html
+++ b/merci.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Merci !</h1>
   <p>Votre message a bien été envoyé. Nous vous répondrons dès que possible.</p>
-  <p>Si notre réponse tarde, contactez-nous au 06 00 00 00 00.</p>
+  <p>Si notre réponse tarde, contactez-nous au 0667860295.</p>
   <a href="index.html">Retour à l'accueil</a>
 </body>
 </html>
