lien cliquable tel et mail

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
                 <div>
                     <span>nous contacter</span>
                     <ul>
-                        <li>0667860295</li>
-                        <li>contact@cmb3d.fr</li>
+                        <li><a href="tel:+33667860295">06 67 86 02 95</a></li>
+                        <li><a href="mailto:contact@cmb3d.fr">contact@cmb3d.fr</a></li>
                     </ul>
                 </div>
 
