--- a/merci.html
+++ b/merci.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Merci !</h1>
   <p>Votre message a bien été envoyé. Nous vous répondrons dès que possible.</p>
-  <p>Si notre réponse tarde, contactez-nous au 0667860295.</p>
-  <a href="index.html">Retour à l'accueil</a>
+  <p>Si notre réponse tarde, contactez-nous au <a class="number" href="tel:+33667860295">06 67 86 02 95</a>.</p>
+  <a class="btn-acc" href="index.html">Retour à l'accueil</a>
 </body>
 </html>
