ajout test adresse en copie

--- a/index.html
+++ b/index.html
@@ -211,11 +211,14 @@
                         <!-- Anti Spam simple-->
                         <input type="text" name="_honey" style="display:none">
 
-                        <!-- Désactive le captcha automatique (ça évite la popup de vérif) -->
+                        <!-- Captcha automatique (ça évite la popup de vérif) -->
                         <input type="hidden" name="_captcha" value="true">
 
                         <!-- Définit un objet personnalisé -->
                         <input type="hidden" name="_subject" value="Nouveau message depuis le site CMB3D">
+
+                        <!-- mail en copie -->
+                        <input type="hidden" name="_cc" value="dixneufcode@gmail.com">
 
                         <!-- Rediriger l’utilisateur après envoi -->
                         <input type="hidden" name="_next" value="https://cmb3d.fr/merci.html">
