test mail cc OK

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <input type="hidden" name="_subject" value="Nouveau message depuis le site CMB3D">
 
                         <!-- mail en copie -->
-                        <input type="hidden" name="_cc" value="dixneufcode@gmail.com">
+                        <input type="hidden" name="_cc" value="CMB3D@outlook.fr">
 
                         <!-- Rediriger l’utilisateur après envoi -->
                         <input type="hidden" name="_next" value="https://cmb3d.fr/merci.html">
