ajustement label pour input

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
                         <!-- Anti Spam simple-->
                         <label for="_honey" class="visually-hidden">Laissez ce champ vide</label>
-                        <input type="text" name="_honey" style="display:none">
+                        <input type="text" name="_honey" id="_honey" style="display:none">
 
                         <!-- Captcha automatique (ça évite la popup de vérif) -->
                         <input type="hidden" name="_captcha" value="true">
