--- a/index.html
+++ b/index.html
@@ -152,25 +152,11 @@
             <section class="carousel-agr">
                 <h4>Nos agréments qualités</h4>
                 <div class="carousel-container">
-                    <div class="carousel-track" id="carousel-track">
-                    <!-- Logos (doublés pour boucle fluide) -->
+                    <div class="carousel-track">
+                    <!-- Logos Certifications -->
                     <img src="assets/img/Agrément/CertiPunaise.webp" alt="Certification CertiPunaise" loading="lazy">
                     <img src="assets/img/Agrément/Ministère_écologie.webp" alt="Certification Ministère Écologie" loading="lazy">
                     <img src="assets/img/Agrément/CertiBiocide.webp" alt="Certification CertiBiocide" loading="lazy">
-
-                    <!-- Doublage pour animation fluide infinie -->
-                    <img src="assets/img/Agrément/CertiPunaise.webp" alt="Certification CertiPunaise" loading="lazy">
-                    <img src="assets/img/Agrément/Ministère_écologie.webp" alt="Certification Ministère Écologie" loading="lazy">
-                    <img src="assets/img/Agrément/CertiBiocide.webp" alt="Certification CertiBiocide" loading="lazy">
-
-                    <img src="assets/img/Agrément/CertiPunaise.webp" alt="Certification CertiPunaise" loading="lazy">
-                    <img src="assets/img/Agrément/Ministère_écologie.webp" alt="Certification Ministère Écologie" loading="lazy">
-                    <img src="assets/img/Agrément/CertiBiocide.webp" alt="Certification CertiBiocide" loading="lazy">
-
-                    <img src="assets/img/Agrément/CertiPunaise.webp" alt="Certification CertiPunaise" loading="lazy">
-                    <img src="assets/img/Agrément/Ministère_écologie.webp" alt="Certification Ministère Écologie" loading="lazy">
-                    <img src="assets/img/Agrément/CertiBiocide.webp" alt="Certification CertiBiocide" loading="lazy">
-                    </div>
                 </div>
             </section>
 
@@ -227,7 +213,7 @@
             <section class="carousel-conf">
                 <h4>Ils nous font confiance</h4>
                 <div class="carousel-container">
-                    <div class="carousel-track" id="carousel-track">
+                    <div class="carousel-track">
                     <!-- Logos (doublés pour boucle fluide) -->
                     <img src="assets/img/Entreprises/Logo_alstom.webp" alt="Logo alstom" loading="lazy">
                     <img src="assets/img/Entreprises/Logo_dior.webp" alt="Logo dior" loading="lazy">
@@ -237,17 +223,6 @@
                     <img src="assets/img/Entreprises/Logo_edenred.webp" alt="Logo edenred" loading="lazy">
                     <img src="assets/img/Entreprises/Logo_pfizer.webp" alt="Logo pfizer" loading="lazy">
                     <img src="assets/img/Entreprises/Logo_intersport.webp" alt="Logo intersport" loading="lazy">
-
-                    <!-- Doublage pour animation fluide infinie -->
-                    <img src="assets/img/Entreprises/Logo_alstom.webp" alt="Logo alstom" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_dior.webp" alt="Logo dior" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_amundi.webp" alt="Logo amundi" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_MENJ.webp" alt="Logo Ministère de l'éducation nationale et de la jeunesse" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_MESR.webp" alt="Logo Ministère de l'enseignement supérieur et de la recherche" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_edenred.webp" alt="Logo edenred" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_pfizer.webp" alt="Logo pfizer" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_intersport.webp" alt="Logo intersport" loading="lazy">
-                    </div>
                 </div>
             </section>
 
