ajout avis google

--- a/index.html
+++ b/index.html
@@ -124,6 +124,19 @@
                     <img class="acc-img" src="assets/img/Photos/Image_accueil_CMB3D.webp" alt="image d'un intervenant de l'entreprise CMB3D durant son travail" fetchpriority="high">
                 </div>
             </section>
+
+            <!---------------------------------- AGRÉMENTS ---------------------------------->
+            <section class="carousel-agr">
+                <h4>Nos agréments qualités</h4>
+                <div class="carousel-container">
+                    <div class="carousel-track">
+                    <!-- Logos Certifications -->
+                    <img src="assets/img/Agrément/CertiPunaise.webp" alt="Certification CertiPunaise" loading="lazy">
+                    <img src="assets/img/Agrément/Ministère_écologie.webp" alt="Certification Ministère Écologie" loading="lazy">
+                    <img src="assets/img/Agrément/CertiBiocide.webp" alt="Certification CertiBiocide" loading="lazy">
+                </div>
+            </section>
+
             <!---------------------------------- NOS SERVICES ---------------------------------->
             <section id="services">
                 <div class="services-container">
@@ -148,15 +161,20 @@
                 </div>
             </section>
 
-            <!---------------------------------- AGRÉMENTS ---------------------------------->
-            <section class="carousel-agr">
-                <h4>Nos agréments qualités</h4>
+            <!---------------------------------- CONFIANCE ---------------------------------->
+            <section class="carousel-conf">
+                <h4>Ils nous font confiance</h4>
                 <div class="carousel-container">
                     <div class="carousel-track">
-                    <!-- Logos Certifications -->
-                    <img src="assets/img/Agrément/CertiPunaise.webp" alt="Certification CertiPunaise" loading="lazy">
-                    <img src="assets/img/Agrément/Ministère_écologie.webp" alt="Certification Ministère Écologie" loading="lazy">
-                    <img src="assets/img/Agrément/CertiBiocide.webp" alt="Certification CertiBiocide" loading="lazy">
+                    <!-- Logos (doublés pour boucle fluide) -->
+                    <img src="assets/img/Entreprises/Logo_alstom.webp" alt="Logo alstom" loading="lazy">
+                    <img src="assets/img/Entreprises/Logo_dior.webp" alt="Logo dior" loading="lazy">
+                    <img src="assets/img/Entreprises/Logo_amundi.webp" alt="Logo amundi" loading="lazy">
+                    <img src="assets/img/Entreprises/Logo_MENJ.webp" alt="Logo Ministère de l'éducation nationale et de la jeunesse" loading="lazy">
+                    <img src="assets/img/Entreprises/Logo_MESR.webp" alt="Logo Ministère de l'enseignement supérieur et de la recherche" loading="lazy">
+                    <img src="assets/img/Entreprises/Logo_edenred.webp" alt="Logo edenred" loading="lazy">
+                    <img src="assets/img/Entreprises/Logo_pfizer.webp" alt="Logo pfizer" loading="lazy">
+                    <img src="assets/img/Entreprises/Logo_intersport.webp" alt="Logo intersport" loading="lazy">
                 </div>
             </section>
 
@@ -209,22 +227,10 @@
                 </div>
             </section>
 
-            <!---------------------------------- CONFIANCE ---------------------------------->
-            <section class="carousel-conf">
-                <h4>Ils nous font confiance</h4>
-                <div class="carousel-container">
-                    <div class="carousel-track">
-                    <!-- Logos (doublés pour boucle fluide) -->
-                    <img src="assets/img/Entreprises/Logo_alstom.webp" alt="Logo alstom" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_dior.webp" alt="Logo dior" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_amundi.webp" alt="Logo amundi" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_MENJ.webp" alt="Logo Ministère de l'éducation nationale et de la jeunesse" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_MESR.webp" alt="Logo Ministère de l'enseignement supérieur et de la recherche" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_edenred.webp" alt="Logo edenred" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_pfizer.webp" alt="Logo pfizer" loading="lazy">
-                    <img src="assets/img/Entreprises/Logo_intersport.webp" alt="Logo intersport" loading="lazy">
-                </div>
-            </section>
+            <!---------------------------------- AVIS ---------------------------------->
+
+            <div id="shapo-widget-cc4ae40d333952c5c62b"></div>
+            <script id="shapo-embed-js" type="text/javascript" src="https://cdn.shapo.io/js/embed.js" defer></script>
 
             <!---------------------------------- CONTACT ---------------------------------->
             <section id="contact">
