--- a/merci.html
+++ b/merci.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Merci !</title>
-  <!--     CSS     -->
-    <link rel="stylesheet" href="assets/css/merci.css">
-</head>
-<body>
-  <h1>Merci !</h1>
-  <p>Votre message a bien été envoyé. Nous vous répondrons dès que possible.</p>
-  <p>Si notre réponse tarde, contactez-nous au <a class="number" href="tel:+33667860295">06 67 86 02 95</a>.</p>
-  <a class="btn-acc" href="index.html">Retour à l'accueil</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Merci !</title>
+    <!--     CSS     -->
+    <link rel="stylesheet" href="assets/css/merci.css" />
+  </head>
+  <body>
+    <h1>Merci !</h1>
+    <p>
+      Votre message a bien été envoyé. Nous vous répondrons dès que possible.
+    </p>
+    <p>
+      Si notre réponse tarde, contactez-nous au
+      <a class="number" href="tel:+33667860295">06 67 86 02 95</a>.
+    </p>
+    <a class="btn-acc" href="index.html">Retour à l'accueil</a>
+  </body>
 </html>
